--- a/apps/api/src/Domain.DermaImage/Domain.DermaImage.csproj
+++ b/apps/api/src/Domain.DermaImage/Domain.DermaImage.csproj
@@ -7,9 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="Entities\" />
-      <Folder Include="Interfaces\Repository\" />
-      <Folder Include="Interfaces\Services\" />
+      <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="9.0.2" />
     </ItemGroup>
 
 </Project>
