feat: Implement application layer with DTOs, managers, and services for dermatological image management

--- a/apps/api/src/Application.DermaImage/Application.DermaImage.csproj
+++ b/apps/api/src/Application.DermaImage/Application.DermaImage.csproj
@@ -7,8 +7,11 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="Managers\" />
-      <Folder Include="Services\" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.2" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Domain.DermaImage\Domain.DermaImage.csproj" />
     </ItemGroup>
 
 </Project>
