feat: Implement image and institution management controllers, services, and storage configuration

--- a/apps/api/src/WebApi.DermaImage/appsettings.Development.json
+++ b/apps/api/src/WebApi.DermaImage/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ImageStorage": {
+    "RootPath": "/home/michell/Proyectos/DermaUH-Image-Database/apps/api/src/WebApi.DermaImage/ImageStorage"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
