--- a/apps/api/src/WebApi.DermaImage/WebApi.DermaImage.csproj
+++ b/apps/api/src/WebApi.DermaImage/WebApi.DermaImage.csproj
@@ -7,11 +7,16 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.12"/>
+        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.12" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.2">
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+            <PrivateAssets>all</PrivateAssets>
+        </PackageReference>
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Controllers\" />
+      <ProjectReference Include="..\Application.DermaImage\Application.DermaImage.csproj" />
+      <ProjectReference Include="..\Infrastructure.DermaImage\Infrastructure.DermaImage.csproj" />
     </ItemGroup>
 
 </Project>
