--- a/apps/api/src/WebApi.DermaImage/appsettings.json
+++ b/apps/api/src/WebApi.DermaImage/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ImageStorage": {
+    "RootPath": "/home/michell/Proyectos/DermaUH-Image-Database/apps/api/src/WebApi.DermaImage/ImageStorage"
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=DermaImage;Username=root;Password=root1234"
+  }
 }
